# gradstudent

./: .clang-tidy  .devcontainer.json  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  README.md
.github/workflows/: test.yml
benchmarks/: CMakeLists.txt  main.cpp
examples/: CMakeLists.txt  README.md
examples/image-processing/: .gitignore  CMakeLists.txt  README.md  main.cpp  titus.pgm
examples/lenet/: CMakeLists.txt  README.md  download_mnist.sh  lenet.py  main.cpp
examples/lenet/weights/: conv1.bias.npy  conv1.weight.npy  conv2.bias.npy  conv2.weight.npy  fc1.bias.npy  fc1.weight.npy  fc2.bias.npy  fc2.weight.npy  fc3.bias.npy  fc3.weight.npy
include/gradstudent/: array.h  iter.h  ops.h  tensor.h  utils.h
include/gradstudent/internal/: meta.h  utils.h
scripts/: format.sh  lint.sh  tidy.sh
src/: CMakeLists.txt  array.cpp  kernels.cpp  multiIndex.cpp  multi_index.cpp  ops.cpp  tensor.cpp  tensor_data.cpp  utils.cpp
src/array/: ctors.cpp  operators.cpp  views.cpp
src/include/: array.h  gradstudent.h  kernels.h  meta.h  multiIndex.h  multi_index.h  ops.h  tensor.h  tensor_data.h  tensor_iter.h  tensor_iter_simple.h  types.h  utils.h
src/include/internal/: utils.h
src/internal/: utils.cpp
src/ops/: activations.cpp  arithmetic.cpp  conv.cpp  copies.cpp  linalg.cpp  reductions.cpp  utils.cpp  views.cpp
src/tensor/: common.cpp  ctors.cpp  operations.cpp  operators.cpp  transforms.cpp  utils.cpp  views.cpp
src/utils/: image.cpp  numpy.cpp
tests/: CMakeLists.txt  array_test.cpp  meta_test.cpp  multi_index_test.cpp  opsTest.cpp  ops_test.cpp  test.cpp  utils_test.cpp
tests/ops/: arithmetic_test.cpp  conv_test.cpp  copies_test.cpp  linalg_test.cpp  views_test.cpp
tests/tensor/: ctorsTest.cpp  ctors_test.cpp  operationsTest.cpp  operatorsTest.cpp  operators_test.cpp  tensor_iter_test.cpp  tensor_tuple_test.cpp  views_test.cpp
tools/: array_printer.py  format.sh  lint.sh
tools/git/: pre-commit
